y.output
Terminals unused in grammar

   COMENTARIO
   SIMB_ERRO
   SIMB_IGUAL
   FOR


State 8 conflicts: 1 shift/reduce
State 9 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 11 conflicts: 1 shift/reduce, 1 reduce/reduce
State 16 conflicts: 1 shift/reduce
State 19 conflicts: 2 shift/reduce
State 27 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 38 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 65 conflicts: 2 shift/reduce
State 66 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 107 conflicts: 2 shift/reduce
State 108 conflicts: 1 shift/reduce
State 112 conflicts: 2 shift/reduce
State 116 conflicts: 3 shift/reduce, 1 reduce/reduce
State 118 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 3 shift/reduce, 13 reduce/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce, 1 reduce/reduce
State 141 conflicts: 2 shift/reduce
State 144 conflicts: 2 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 169 conflicts: 4 shift/reduce, 1 reduce/reduce
State 172 conflicts: 1 shift/reduce
State 180 conflicts: 1 shift/reduce
State 181 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce
State 184 conflicts: 1 shift/reduce
State 190 conflicts: 2 shift/reduce
State 191 conflicts: 2 shift/reduce
State 194 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce
State 213 conflicts: 1 shift/reduce
State 214 conflicts: 2 shift/reduce
State 215 conflicts: 2 shift/reduce
State 216 conflicts: 2 shift/reduce
State 219 conflicts: 2 shift/reduce
State 221 conflicts: 1 shift/reduce
State 222 conflicts: 1 shift/reduce
State 223 conflicts: 1 shift/reduce
State 224 conflicts: 1 shift/reduce
State 225 conflicts: 1 shift/reduce
State 228 conflicts: 1 shift/reduce
State 230 conflicts: 1 shift/reduce
State 235 conflicts: 1 shift/reduce, 1 reduce/reduce
State 237 conflicts: 1 shift/reduce
State 238 conflicts: 3 shift/reduce, 13 reduce/reduce
State 239 conflicts: 1 shift/reduce
State 261 conflicts: 1 shift/reduce
State 263 conflicts: 1 shift/reduce
State 264 conflicts: 1 shift/reduce
State 265 conflicts: 1 shift/reduce
State 266 conflicts: 2 shift/reduce
State 267 conflicts: 1 shift/reduce
State 268 conflicts: 1 shift/reduce
State 271 conflicts: 1 shift/reduce
State 282 conflicts: 1 shift/reduce
State 283 conflicts: 1 shift/reduce
State 284 conflicts: 2 shift/reduce, 2 reduce/reduce
State 285 conflicts: 1 shift/reduce
State 289 conflicts: 1 shift/reduce
State 304 conflicts: 1 shift/reduce
State 313 conflicts: 2 shift/reduce, 1 reduce/reduce
State 330 conflicts: 2 shift/reduce
State 331 conflicts: 2 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: PROGRAM ID ';' corpo '.'
    2         | error ID ';' corpo '.'
    3         | PROGRAM error ';' corpo '.'
    4         | PROGRAM ID error corpo '.'
    5         | PROGRAM ID ';' error corpo '.'
    6         | PROGRAM ID ';' corpo error

    7 corpo: dc P_BEGIN comandos P_END
    8      | error P_BEGIN comandos P_END
    9      | dc error comandos P_END
   10      | %empty
   11      | dc P_BEGIN error P_END
   12      | dc P_BEGIN comandos error

   13 dc: dc_c dc_v dc_p

   14 dc_c: CONST ID '=' numero ';' dc_c
   15     | error ID '=' numero ';' dc_c
   16     | CONST error '=' numero ';' dc_c
   17     | CONST ID error numero ';' dc_c
   18     | CONST ID '=' error ';' dc_c
   19     | CONST ID '=' numero error dc_c
   20     | %empty

   21 dc_v: VAR variaveis ':' tipo_var ';' dc_v

   22 $@1: %empty

   23 dc_v: error variaveis ':' tipo_var ';' dc_v $@1 VAR error ':' tipo_var ';' dc_v

   24 $@2: %empty

   25 dc_v: VAR variaveis error tipo_var ';' dc_v $@2 VAR variaveis ':' error ';' dc_v
   26     | VAR variaveis ':' tipo_var error dc_v
   27     | %empty

   28 tipo_var: REAL
   29         | INTEGER
   30         | error

   31 variaveis: ID mais_var
   32          | error mais_var
   33          | ID error

   34 mais_var: ',' variaveis
   35         | error variaveis
   36         | %empty

   37 dc_p: PROCEDURE ID parametros ';' corpo_p dc_p
   38     | error ID parametros ';' corpo_p dc_p
   39     | PROCEDURE error parametros ';' corpo_p dc_p
   40     | PROCEDURE ID error ';' corpo_p dc_p
   41     | PROCEDURE ID parametros error corpo_p dc_p
   42     | PROCEDURE ID parametros ';' error dc_p
   43     | PROCEDURE ID parametros ';' corpo_p error
   44     | %empty

   45 parametros: '(' lista_par ')'
   46           | error lista_par ')'
   47           | '(' error ')'
   48           | '(' lista_par error
   49           | %empty

   50 lista_par: variaveis ':' tipo_var mais_par
   51          | error ':' tipo_var mais_par
   52          | variaveis error tipo_var mais_par
   53          | variaveis ':' error mais_par
   54          | variaveis ':' tipo_var error

   55 mais_par: ';' lista_par
   56         | error lista_par
   57         | ';' error
   58         | %empty

   59 corpo_p: dc_loc P_BEGIN comandos P_END ';'
   60        | error P_BEGIN comandos P_END ';'
   61        | dc_loc error comandos P_END ';'
   62        | dc_loc P_BEGIN error P_END ';'
   63        | dc_loc P_BEGIN comandos error ';'
   64        | dc_loc P_BEGIN comandos P_END error

   65 dc_loc: dc_v

   66 lista_arg: '(' argumentos ')'
   67          | error argumentos ')'
   68          | '(' error ')'
   69          | '(' argumentos error
   70          | %empty

   71 argumentos: ID mais_ident
   72           | error mais_ident
   73           | ID error

   74 mais_ident: ';' argumentos
   75           | error argumentos
   76           | %empty

   77 pfalsa: ELSE cmd
   78       | error cmd
   79       | ELSE error
   80       | %empty

   81 comandos: cmd ';' comandos
   82         | error ';' comandos
   83         | cmd error comandos
   84         | %empty

   85 cmd: READ '(' variaveis ')'
   86    | READ error variaveis ')'
   87    | READ '(' error ')'
   88    | READ '(' variaveis error
   89    | WRITE '(' variaveis ')'
   90    | WRITE '(' error ')'
   91    | WRITE error variaveis ')'
   92    | WRITE '(' variaveis error
   93    | WHILE '(' condicao ')' DO cmd
   94    | WHILE error condicao ')' DO cmd
   95    | WHILE '(' condicao error DO cmd
   96    | WHILE '(' condicao ')' error cmd
   97    | IF condicao THEN cmd pfalsa
   98    | IF condicao error cmd pfalsa
   99    | ID SIMB_ATRIBUICAO expressao
  100    | ID error expressao
  101    | ID lista_arg
  102    | P_BEGIN comandos P_END
  103    | P_BEGIN comandos error

  104 condicao: expressao relacao expressao

  105 relacao: '='
  106        | SIMB_DIFERENTE
  107        | SIMB_MAIOR_IGUAL
  108        | SIMB_MENOR_IGUAL
  109        | '>'
  110        | '<'

  111 expressao: termo outros_termos
  112          | error outros_termos
  113          | termo error

  114 op_un: '+'
  115      | '-'
  116      | %empty

  117 outros_termos: op_ad termo outros_termos
  118              | %empty
  119              | error termo outros_termos
  120              | op_ad error outros_termos
  121              | op_ad termo error

  122 op_ad: '+'
  123      | '-'

  124 termo: op_un fator mais_fatores
  125      | error fator mais_fatores
  126      | op_un error mais_fatores
  127      | op_un fator error

  128 mais_fatores: op_mul fator mais_fatores
  129             | %empty
  130             | error fator mais_fatores
  131             | op_mul error mais_fatores
  132             | op_mul fator error

  133 op_mul: '*'
  134       | '/'

  135 fator: ID
  136      | numero
  137      | '(' expressao ')'
  138      | '(' error ')'

  139 numero: NUMERO_INT
  140       | NUMERO_REAL
  141       | error


Terminals, with rules where they appear

$end (0) 0
'(' (40) 45 47 48 66 68 69 85 87 88 89 90 92 93 95 96 137 138
')' (41) 45 46 47 66 67 68 85 86 87 89 90 91 93 94 96 137 138
'*' (42) 133
'+' (43) 114 122
',' (44) 34
'-' (45) 115 123
'.' (46) 1 2 3 4 5
'/' (47) 134
':' (58) 21 23 25 26 50 51 53 54
';' (59) 1 2 3 5 6 14 15 16 17 18 21 23 25 37 38 39 40 42 43 55 57
    59 60 61 62 63 74 81 82
'<' (60) 110
'=' (61) 14 15 16 18 19 105
'>' (62) 109
error (256) 2 3 4 5 6 8 9 11 12 15 16 17 18 19 23 25 26 30 32 33 35
    38 39 40 41 42 43 46 47 48 51 52 53 54 56 57 60 61 62 63 64 67
    68 69 72 73 75 78 79 82 83 86 87 88 90 91 92 94 95 96 98 100 103
    112 113 119 120 121 125 126 127 130 131 132 138 141
NUMERO_INT (258) 139
NUMERO_REAL (259) 140
ID (260) 1 2 4 5 6 14 15 17 18 19 31 33 37 38 40 41 42 43 71 73 99
    100 101 135
SIMB_DIFERENTE (261) 106
SIMB_MENOR_IGUAL (262) 108
SIMB_MAIOR_IGUAL (263) 107
COMENTARIO (264)
SIMB_ERRO (265)
SIMB_ATRIBUICAO (266) 99
SIMB_IGUAL (267)
PROGRAM (268) 1 3 4 5 6
P_BEGIN (269) 7 8 11 12 59 60 62 63 64 102 103
P_END (270) 7 8 9 11 59 60 61 62 64 102
CONST (271) 14 16 17 18 19
VAR (272) 21 23 25 26
REAL (273) 28
INTEGER (274) 29
PROCEDURE (275) 37 39 40 41 42 43
IF (276) 97 98
THEN (277) 97
ELSE (278) 77 79
WHILE (279) 93 94 95 96
FOR (280)
DO (281) 93 94 95
WRITE (282) 89 90 91 92
READ (283) 85 86 87 88


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
programa (43)
    on left: 1 2 3 4 5 6, on right: 0
corpo (44)
    on left: 7 8 9 10 11 12, on right: 1 2 3 4 5 6
dc (45)
    on left: 13, on right: 7 9 11 12
dc_c (46)
    on left: 14 15 16 17 18 19 20, on right: 13 14 15 16 17 18 19
dc_v (47)
    on left: 21 23 25 26 27, on right: 13 21 23 25 26 65
$@1 (48)
    on left: 22, on right: 23
$@2 (49)
    on left: 24, on right: 25
tipo_var (50)
    on left: 28 29 30, on right: 21 23 25 26 50 51 52 54
variaveis (51)
    on left: 31 32 33, on right: 21 23 25 26 34 35 50 52 53 54 85 86
    88 89 91 92
mais_var (52)
    on left: 34 35 36, on right: 31 32
dc_p (53)
    on left: 37 38 39 40 41 42 43 44, on right: 13 37 38 39 40 41 42
parametros (54)
    on left: 45 46 47 48 49, on right: 37 38 39 41 42 43
lista_par (55)
    on left: 50 51 52 53 54, on right: 45 46 48 55 56
mais_par (56)
    on left: 55 56 57 58, on right: 50 51 52 53
corpo_p (57)
    on left: 59 60 61 62 63 64, on right: 37 38 39 40 41 43
dc_loc (58)
    on left: 65, on right: 59 61 62 63 64
lista_arg (59)
    on left: 66 67 68 69 70, on right: 101
argumentos (60)
    on left: 71 72 73, on right: 66 67 69 74 75
mais_ident (61)
    on left: 74 75 76, on right: 71 72
pfalsa (62)
    on left: 77 78 79 80, on right: 97 98
comandos (63)
    on left: 81 82 83 84, on right: 7 8 9 12 59 60 61 63 64 81 82 83
    102 103
cmd (64)
    on left: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103, on right: 77 78 81 83 93 94 95 96 97 98
condicao (65)
    on left: 104, on right: 93 94 95 96 97 98
relacao (66)
    on left: 105 106 107 108 109 110, on right: 104
expressao (67)
    on left: 111 112 113, on right: 99 100 104 137
op_un (68)
    on left: 114 115 116, on right: 124 126 127
outros_termos (69)
    on left: 117 118 119 120 121, on right: 111 112 117 119 120
op_ad (70)
    on left: 122 123, on right: 117 120 121
termo (71)
    on left: 124 125 126 127, on right: 111 113 117 119 121
mais_fatores (72)
    on left: 128 129 130 131 132, on right: 124 125 126 128 130 131
op_mul (73)
    on left: 133 134, on right: 128 131 132
fator (74)
    on left: 135 136 137 138, on right: 124 125 127 128 130 132
numero (75)
    on left: 139 140 141, on right: 14 15 16 17 19 136


State 0

    0 $accept: . programa $end

    error    shift, and go to state 1
    PROGRAM  shift, and go to state 2

    programa  go to state 3


State 1

    2 programa: error . ID ';' corpo '.'

    ID  shift, and go to state 4


State 2

    1 programa: PROGRAM . ID ';' corpo '.'
    3         | PROGRAM . error ';' corpo '.'
    4         | PROGRAM . ID error corpo '.'
    5         | PROGRAM . ID ';' error corpo '.'
    6         | PROGRAM . ID ';' corpo error

    error  shift, and go to state 5
    ID     shift, and go to state 6


State 3

    0 $accept: programa . $end

    $end  shift, and go to state 7


State 4

    2 programa: error ID . ';' corpo '.'

    ';'  shift, and go to state 8


State 5

    3 programa: PROGRAM error . ';' corpo '.'

    ';'  shift, and go to state 9


State 6

    1 programa: PROGRAM ID . ';' corpo '.'
    4         | PROGRAM ID . error corpo '.'
    5         | PROGRAM ID . ';' error corpo '.'
    6         | PROGRAM ID . ';' corpo error

    error  shift, and go to state 10
    ';'    shift, and go to state 11


State 7

    0 $accept: programa $end .

    $default  accept


State 8

    2 programa: error ID ';' . corpo '.'

    error  shift, and go to state 12
    CONST  shift, and go to state 13

    error      [reduce using rule 20 (dc_c)]
    P_BEGIN    reduce using rule 20 (dc_c)
    VAR        reduce using rule 20 (dc_c)
    PROCEDURE  reduce using rule 20 (dc_c)
    '.'        reduce using rule 10 (corpo)

    corpo  go to state 14
    dc     go to state 15
    dc_c   go to state 16


State 9

    3 programa: PROGRAM error ';' . corpo '.'

    error  shift, and go to state 12
    CONST  shift, and go to state 13

    error      [reduce using rule 20 (dc_c)]
    P_BEGIN    reduce using rule 20 (dc_c)
    VAR        reduce using rule 20 (dc_c)
    PROCEDURE  reduce using rule 20 (dc_c)
    '.'        reduce using rule 10 (corpo)

    corpo  go to state 17
    dc     go to state 15
    dc_c   go to state 16


State 10

    4 programa: PROGRAM ID error . corpo '.'

    error  shift, and go to state 12
    CONST  shift, and go to state 13

    error      [reduce using rule 20 (dc_c)]
    P_BEGIN    reduce using rule 20 (dc_c)
    VAR        reduce using rule 20 (dc_c)
    PROCEDURE  reduce using rule 20 (dc_c)
    '.'        reduce using rule 10 (corpo)

    corpo  go to state 18
    dc     go to state 15
    dc_c   go to state 16


State 11

    1 programa: PROGRAM ID ';' . corpo '.'
    5         | PROGRAM ID ';' . error corpo '.'
    6         | PROGRAM ID ';' . corpo error

    error  shift, and go to state 19
    CONST  shift, and go to state 13

    error      [reduce using rule 10 (corpo)]
    error      [reduce using rule 20 (dc_c)]
    P_BEGIN    reduce using rule 20 (dc_c)
    VAR        reduce using rule 20 (dc_c)
    PROCEDURE  reduce using rule 20 (dc_c)
    '.'        reduce using rule 10 (corpo)

    corpo  go to state 20
    dc     go to state 15
    dc_c   go to state 16


State 12

    8 corpo: error . P_BEGIN comandos P_END
   15 dc_c: error . ID '=' numero ';' dc_c

    ID       shift, and go to state 21
    P_BEGIN  shift, and go to state 22


State 13

   14 dc_c: CONST . ID '=' numero ';' dc_c
   16     | CONST . error '=' numero ';' dc_c
   17     | CONST . ID error numero ';' dc_c
   18     | CONST . ID '=' error ';' dc_c
   19     | CONST . ID '=' numero error dc_c

    error  shift, and go to state 23
    ID     shift, and go to state 24


State 14

    2 programa: error ID ';' corpo . '.'

    '.'  shift, and go to state 25


State 15

    7 corpo: dc . P_BEGIN comandos P_END
    9      | dc . error comandos P_END
   11      | dc . P_BEGIN error P_END
   12      | dc . P_BEGIN comandos error

    error    shift, and go to state 26
    P_BEGIN  shift, and go to state 27


State 16

   13 dc: dc_c . dc_v dc_p

    error  shift, and go to state 28
    VAR    shift, and go to state 29

    error      [reduce using rule 27 (dc_v)]
    P_BEGIN    reduce using rule 27 (dc_v)
    PROCEDURE  reduce using rule 27 (dc_v)

    dc_v  go to state 30


State 17

    3 programa: PROGRAM error ';' corpo . '.'

    '.'  shift, and go to state 31


State 18

    4 programa: PROGRAM ID error corpo . '.'

    '.'  shift, and go to state 32


State 19

    5 programa: PROGRAM ID ';' error . corpo '.'
    8 corpo: error . P_BEGIN comandos P_END
   15 dc_c: error . ID '=' numero ';' dc_c

    error    shift, and go to state 12
    ID       shift, and go to state 21
    P_BEGIN  shift, and go to state 22
    CONST    shift, and go to state 13

    error      [reduce using rule 20 (dc_c)]
    P_BEGIN    [reduce using rule 20 (dc_c)]
    VAR        reduce using rule 20 (dc_c)
    PROCEDURE  reduce using rule 20 (dc_c)
    '.'        reduce using rule 10 (corpo)

    corpo  go to state 33
    dc     go to state 15
    dc_c   go to state 16


State 20

    1 programa: PROGRAM ID ';' corpo . '.'
    6         | PROGRAM ID ';' corpo . error

    error  shift, and go to state 34
    '.'    shift, and go to state 35


State 21

   15 dc_c: error ID . '=' numero ';' dc_c

    '='  shift, and go to state 36


State 22

    8 corpo: error P_BEGIN . comandos P_END

    error    shift, and go to state 37
    ID       shift, and go to state 38
    P_BEGIN  shift, and go to state 39
    IF       shift, and go to state 40
    WHILE    shift, and go to state 41
    WRITE    shift, and go to state 42
    READ     shift, and go to state 43

    P_END  reduce using rule 84 (comandos)

    comandos  go to state 44
    cmd       go to state 45


State 23

   16 dc_c: CONST error . '=' numero ';' dc_c

    '='  shift, and go to state 46


State 24

   14 dc_c: CONST ID . '=' numero ';' dc_c
   17     | CONST ID . error numero ';' dc_c
   18     | CONST ID . '=' error ';' dc_c
   19     | CONST ID . '=' numero error dc_c

    error  shift, and go to state 47
    '='    shift, and go to state 48


State 25

    2 programa: error ID ';' corpo '.' .

    $default  reduce using rule 2 (programa)


State 26

    9 corpo: dc error . comandos P_END

    error    shift, and go to state 37
    ID       shift, and go to state 38
    P_BEGIN  shift, and go to state 39
    IF       shift, and go to state 40
    WHILE    shift, and go to state 41
    WRITE    shift, and go to state 42
    READ     shift, and go to state 43

    P_END  reduce using rule 84 (comandos)

    comandos  go to state 49
    cmd       go to state 45


State 27

    7 corpo: dc P_BEGIN . comandos P_END
   11      | dc P_BEGIN . error P_END
   12      | dc P_BEGIN . comandos error

    error    shift, and go to state 50
    ID       shift, and go to state 38
    P_BEGIN  shift, and go to state 39
    IF       shift, and go to state 40
    WHILE    shift, and go to state 41
    WRITE    shift, and go to state 42
    READ     shift, and go to state 43

    error  [reduce using rule 84 (comandos)]
    P_END  reduce using rule 84 (comandos)

    comandos  go to state 51
    cmd       go to state 45


State 28

   23 dc_v: error . variaveis ':' tipo_var ';' dc_v $@1 VAR error ':' tipo_var ';' dc_v

    error  shift, and go to state 52
    ID     shift, and go to state 53

    variaveis  go to state 54


State 29

   21 dc_v: VAR . variaveis ':' tipo_var ';' dc_v
   25     | VAR . variaveis error tipo_var ';' dc_v $@2 VAR variaveis ':' error ';' dc_v
   26     | VAR . variaveis ':' tipo_var error dc_v

    error  shift, and go to state 52
    ID     shift, and go to state 53

    variaveis  go to state 55


State 30

   13 dc: dc_c dc_v . dc_p

    error      shift, and go to state 56
    PROCEDURE  shift, and go to state 57

    error    [reduce using rule 44 (dc_p)]
    P_BEGIN  reduce using rule 44 (dc_p)

    dc_p  go to state 58


State 31

    3 programa: PROGRAM error ';' corpo '.' .

    $default  reduce using rule 3 (programa)


State 32

    4 programa: PROGRAM ID error corpo '.' .

    $default  reduce using rule 4 (programa)


State 33

    5 programa: PROGRAM ID ';' error corpo . '.'

    '.'  shift, and go to state 59


State 34

    6 programa: PROGRAM ID ';' corpo error .

    $default  reduce using rule 6 (programa)


State 35

    1 programa: PROGRAM ID ';' corpo '.' .

    $default  reduce using rule 1 (programa)


State 36

   15 dc_c: error ID '=' . numero ';' dc_c

    error        shift, and go to state 60
    NUMERO_INT   shift, and go to state 61
    NUMERO_REAL  shift, and go to state 62

    numero  go to state 63


State 37

   82 comandos: error . ';' comandos

    ';'  shift, and go to state 64


State 38

   99 cmd: ID . SIMB_ATRIBUICAO expressao
  100    | ID . error expressao
  101    | ID . lista_arg

    error            shift, and go to state 65
    SIMB_ATRIBUICAO  shift, and go to state 66
    '('              shift, and go to state 67

    error  [reduce using rule 70 (lista_arg)]
    ELSE   reduce using rule 70 (lista_arg)
    ';'    reduce using rule 70 (lista_arg)

    lista_arg  go to state 68


State 39

  102 cmd: P_BEGIN . comandos P_END
  103    | P_BEGIN . comandos error

    error    shift, and go to state 37
    ID       shift, and go to state 38
    P_BEGIN  shift, and go to state 39
    IF       shift, and go to state 40
    WHILE    shift, and go to state 41
    WRITE    shift, and go to state 42
    READ     shift, and go to state 43

    error  [reduce using rule 84 (comandos)]
    P_END  reduce using rule 84 (comandos)

    comandos  go to state 69
    cmd       go to state 45


State 40

   97 cmd: IF . condicao THEN cmd pfalsa
   98    | IF . condicao error cmd pfalsa

    error  shift, and go to state 70
    '+'    shift, and go to state 71
    '-'    shift, and go to state 72

    error        [reduce using rule 116 (op_un)]
    NUMERO_INT   reduce using rule 116 (op_un)
    NUMERO_REAL  reduce using rule 116 (op_un)
    ID           reduce using rule 116 (op_un)
    '('          reduce using rule 116 (op_un)

    condicao   go to state 73
    expressao  go to state 74
    op_un      go to state 75
    termo      go to state 76


State 41

   93 cmd: WHILE . '(' condicao ')' DO cmd
   94    | WHILE . error condicao ')' DO cmd
   95    | WHILE . '(' condicao error DO cmd
   96    | WHILE . '(' condicao ')' error cmd

    error  shift, and go to state 77
    '('    shift, and go to state 78


State 42

   89 cmd: WRITE . '(' variaveis ')'
   90    | WRITE . '(' error ')'
   91    | WRITE . error variaveis ')'
   92    | WRITE . '(' variaveis error

    error  shift, and go to state 79
    '('    shift, and go to state 80


State 43

   85 cmd: READ . '(' variaveis ')'
   86    | READ . error variaveis ')'
   87    | READ . '(' error ')'
   88    | READ . '(' variaveis error

    error  shift, and go to state 81
    '('    shift, and go to state 82


State 44

    8 corpo: error P_BEGIN comandos . P_END

    P_END  shift, and go to state 83


State 45

   81 comandos: cmd . ';' comandos
   83         | cmd . error comandos

    error  shift, and go to state 84
    ';'    shift, and go to state 85


State 46

   16 dc_c: CONST error '=' . numero ';' dc_c

    error        shift, and go to state 60
    NUMERO_INT   shift, and go to state 61
    NUMERO_REAL  shift, and go to state 62

    numero  go to state 86


State 47

   17 dc_c: CONST ID error . numero ';' dc_c

    error        shift, and go to state 60
    NUMERO_INT   shift, and go to state 61
    NUMERO_REAL  shift, and go to state 62

    numero  go to state 87


State 48

   14 dc_c: CONST ID '=' . numero ';' dc_c
   18     | CONST ID '=' . error ';' dc_c
   19     | CONST ID '=' . numero error dc_c

    error        shift, and go to state 88
    NUMERO_INT   shift, and go to state 61
    NUMERO_REAL  shift, and go to state 62

    numero  go to state 89


State 49

    9 corpo: dc error comandos . P_END

    P_END  shift, and go to state 90


State 50

   11 corpo: dc P_BEGIN error . P_END
   82 comandos: error . ';' comandos

    P_END  shift, and go to state 91
    ';'    shift, and go to state 64


State 51

    7 corpo: dc P_BEGIN comandos . P_END
   12      | dc P_BEGIN comandos . error

    error  shift, and go to state 92
    P_END  shift, and go to state 93


State 52

   32 variaveis: error . mais_var

    error  shift, and go to state 94
    ','    shift, and go to state 95

    error  [reduce using rule 36 (mais_var)]
    ':'    reduce using rule 36 (mais_var)
    ')'    reduce using rule 36 (mais_var)

    mais_var  go to state 96


State 53

   31 variaveis: ID . mais_var
   33          | ID . error

    error  shift, and go to state 97
    ','    shift, and go to state 95

    error  [reduce using rule 36 (mais_var)]
    ':'    reduce using rule 36 (mais_var)
    ')'    reduce using rule 36 (mais_var)

    mais_var  go to state 98


State 54

   23 dc_v: error variaveis . ':' tipo_var ';' dc_v $@1 VAR error ':' tipo_var ';' dc_v

    ':'  shift, and go to state 99


State 55
